# ProtonSimulation

./: CMakeLists.txt  G4_TISSUE_SOFT_ICRP_GEOMETRY.gdml  G4_WATER_GEOMETRY.gdml  Geant4Reader.py  Geant4Simulation.py  Prompt_photon_simulation.gdml  README.md  init.mac  macroWriter.py  main.cc  promptGammaSpectra.mac  proton_source.mac  run.mac  scoring.mac  spectraReader.py  spectraScoring.mac  vis.mac
include/: ActionInitialization.hh  DetectorConstruction.hh  HadrontherapyParticles.hh  HadrontherapyPhysicsList.hh  HadrontherapyPhysicsListMessenger.hh  HadrontherapyStepMax.hh  HadrontherapyStepMaxMessenger.hh  LocalIonIonInelasticPhysic.hh  PrimaryGeneratorAction.hh  Run.hh  RunAction.hh  ScoreWriter.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  HadrontherapyPhysicsList.cc  HadrontherapyStepMax.cc  HadrontherapyStepMaxMessenger.cc  LocalIonIonInelasticPhysic.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  ScoreWriter.cc
